kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lego-data-service-deployment
  namespace: services-sandbox
  labels:
    app: lego-data-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lego-data-service-deployment
  template:
    metadata:
      name: lego-data-service-deployment
      labels:
        app: lego-data-service-deployment
    spec:
      containers:
        - name: lego-data-service-deployment
          image: quay.io/tvattima/lego-data-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
          volumeMounts:
            - name: bricklink
              mountPath: /etc/.credentials/bricklink
            - name: database
              mountPath: /etc/.credentials/database
      volumes:
        - name: bricklink
          projected:
            sources:
              - secret:
                  name: bricklink-client-api-keys-secret
                  items:
                    - key: bricklink-client-api-keys.yml
                      path: bricklink-client-api-keys.yml
              - secret:
                  name: bricklink-web-secret
                  items:
                    - key: bricklink-web.yml
                      path: bricklink-web.yml
        - name: database
          secret:
            secretName: database-configuration-secret
      restartPolicy: Always
